gccida/g2/reposition_prologue_and_epilogue_notes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8339:4: error: expected ';' after expression
rtx last_insn; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8339:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8341:4: error: expected ';' after expression
rtx j; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8341:5: error: use of undeclared identifier 'j'
rtx j; // r11 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8342:4: error: expected ';' after expression
rtx v12; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8342:5: error: use of undeclared identifier 'v12'
rtx v12; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8396:1: error: use of undeclared identifier 'last_insn'
last_insn = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8397:6: error: use of undeclared identifier 'last_insn'
if ( last_insn ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8400:1: error: use of undeclared identifier 'j'
j = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8401:1: error: use of undeclared identifier 'v12'
v12 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8404:20: error: use of undeclared identifier 'last_insn'
while ( *( _WORD *)last_insn == 37 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8406:6: error: use of undeclared identifier 'last_insn'
if ( last_insn[2].fld[0].rtint == -89 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8407:1: error: use of undeclared identifier 'j'
j = last_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8407:5: error: use of undeclared identifier 'last_insn'
j = last_insn; 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8408:1: error: use of undeclared identifier 'last_insn'
last_insn = ( rtx)last_insn[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8409:7: error: use of undeclared identifier 'last_insn'
if ( !last_insn ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8412:16: error: use of undeclared identifier 'last_insn'
if ( contains( last_insn, v10) ) 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8414:1: error: use of undeclared identifier 'v12'
v12 = last_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/function.c:8414:7: error: use of undeclared identifier 'last_insn'
v12 = last_insn; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reposition_prologue_and_epilogue_notes/src/obj/function.o] Error 1
